@@ -17,7 +17,7 @@
     <string name="sign_element_earth">Earth</string>
     <string name="sign_element_air">Air</string>
     <string name="sign_element_water">Water</string>
-    <string name="search">Search Contact</string>
+    <string name="search">Search for age, name, sign, etc</string>
     <string name="dual_string" translatable="false">%1$s/%2$s</string>
     <string name="birthday_string">%1$s/%2$d</string>
     <string name="contact_has_no_year">No year specified :(</string>
